--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionString": {
+    "DefaultConnection": "server=172.26.80.36;port=3306;satabase=jiradb;user=jira_rep_user;password=JIRA_Rep_UserPW"
   }
 }
