--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionString": {
+    "DefaultConnection": "server=172.26.80.36;port=3306;satabase=jiradb;user=jira_rep_user;password=JIRA_Rep_UserPW"
+  }
 }
