--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "server=172.26.80.36;port=3306;database=jiradb;user=jira_rep_user;password=JIRA_Rep_UserPW"
   }
 }
